# eds-researcher

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
src/eds_researcher/: __init__.py  main.py
src/eds_researcher/analyzer/: __init__.py  extractor.py  grok_client.py  lead_generator.py  scorer.py
src/eds_researcher/collectors/: __init__.py  base.py  clinical_trials.py  openfda.py  pubchem.py  pubmed.py  reddit.py  reddit_public.py  scholar.py  xai_search.py
src/eds_researcher/memory/: __init__.py  database.py  embeddings.py  models.py
src/eds_researcher/reporter/: __init__.py  delta_report.py  full_report.py  pdf_export.py
src/eds_researcher/reporter/templates/: delta_report.md.j2  full_report.md.j2
src/eds_researcher/scheduler/: __init__.py  cron_setup.py  pipeline.py
tests/: test_integration.py
tests/test_analyzer/: test_extractor.py  test_lead_generator.py  test_scorer.py
tests/test_collectors/: test_clinical_trials.py  test_openfda.py  test_pubchem.py  test_pubmed.py  test_reddit.py  test_reddit_public.py  test_scholar.py  test_xai_search.py
tests/test_memory/: test_database.py  test_embeddings.py
tests/test_reporter/: test_reports.py
